--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ form button {
         <p>Millions of users trust Shopify to manage their online stores.</p>
       </div>
     </div>
-    <div class="line"></div>
+   <div class="line"></div>
     <div class="company-logos">
       <img src="airbirds.svg" alt="" />
       <img src="gymshark.svg" alt="" />
@@ -511,7 +511,7 @@ form button {
       <div class="some-icon-two"></div>
     </form>
 
-    <div class="faq-container">
+    <div clss="faq-container">
       <h1>FAQ</h1>
       <div class="faq faq-one">
         <div class="top">
@@ -544,8 +544,7 @@ form button {
           Try Shopify free for 3 days, no credit card required. After your trial
           expires, choose a pricing plan that suits the size and stage of your
           business
-        </div>
-      </div>
+  </div>      </div>
       <div class="faq faq-four">
         <div class="top">
           <h3>Do I need to be a developer to use it</h3>
@@ -576,7 +575,7 @@ form button {
       </p>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <!-- <script src="jquery.js"></script> -->
+    <script src="jquery.js"></script>
     <!-- <script src="script.js"></script> -->
 
     <script>
