--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@ form button {
     justify-content: center;
     align-items: center;
     padding: 0 3.5em;
+    flex-wrap:nowrap;
   }
   .flex-items .item {
     width: 30%;
