--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ form button {
     justify-content: center;
     align-items: center;
     padding: 0 3.5em;
-    flex-wrap:nowrap;
+    flex-wrap: nowrap;
   }
   .flex-items .item {
     width: 30%;
@@ -471,7 +471,7 @@ form button {
         <p>Millions of users trust Shopify to manage their online stores.</p>
       </div>
     </div>
-   <div class="line"></div>
+    <div class="line"></div>
     <div class="company-logos">
       <img src="airbirds.svg" alt="" />
       <img src="gymshark.svg" alt="" />
@@ -512,7 +512,7 @@ form button {
       <div class="some-icon-two"></div>
     </form>
 
-    <div clss="faq-container">
+    <div class="faq-container">
       <h1>FAQ</h1>
       <div class="faq faq-one">
         <div class="top">
@@ -545,7 +545,8 @@ form button {
           Try Shopify free for 3 days, no credit card required. After your trial
           expires, choose a pricing plan that suits the size and stage of your
           business
-  </div>      </div>
+        </div>
+      </div>
       <div class="faq faq-four">
         <div class="top">
           <h3>Do I need to be a developer to use it</h3>
